--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1, h2, h3{
 .header{
     display: flex;
     justify-content: space-between;
+    padding: 40px;
 }
 .logo{
     width: 200px;
@@ -20,6 +21,7 @@ h1, h2, h3{
     text-decoration: none;
     color: white;
     font-size: 18px;
+   
 }
 .contact{
     color: black;
@@ -34,29 +36,49 @@ h1, h2, h3{
     color: white;
     border: 1px solid #6ecfff;
 }
+.main{
+    margin-bottom: -3px;
+}
 .main h1{
     color: white;
     font-size: 60px;
     text-align: center;
     letter-spacing: 6px;
 }
+.main-img{
+    margin-top: -150px;
+}
 .arrow{
     margin-left: 50%;
     position: relative;
-    top: 100px;
 }
 .row{
     display: flex;
     background-color: white;
 }
+.row p{
+    color:  hsl(198, 62%, 26%);
+}
+.row h4{
+    font-family: Fraunces;
+    font-size: 22px;
+    text-decoration: underline 5px yellow;
+}
+.learn-more{
+    text-decoration: underline 5px hsl(7, 99%, 70%);
+}
 .row-content{
-    margin: 150px;
+    margin: 150px 150px 0px 150px;
 }
 .row-content h2{
     font-size: 50px;
 }
 .row-content p{
     font-size: 19px;
+}
+.lamp{
+    height: 700px;
+    width: 768px;
 }
 .row-3{
     display: flex;
@@ -73,5 +95,77 @@ h1, h2, h3{
 
 }
 .row-3-content p{
-    width: 400px;
+    width: 300px;
+    font-size: 16px;
+}
+.testimonials{
+    background-color: white;
+    padding: 150px 200px 150px 200px;
+
+}
+.tests{
+    display: flex;
+    justify-content: center;
+   
+}
+.test{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.test img{
+    width: 50px;
+    border-radius: 50% ;
+    margin-bottom: 40px;
+}
+.para{
+    width: 90%;
+    text-align: center;
+    color:  hsl(198, 62%, 26%);
+}
+.name{
+    font-family: Fraunces;
+    color: #0a233c;
+    font-size: 24px;
+    font-weight: 800;
+}
+.position{
+    color:hsl(232, 10%, 55%);
+    letter-spacing: 1px;
+    margin-top: -10px;
+}
+.headline{
+    font-size: 18px;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: Fraunces;
+    letter-spacing: 6px;
+    color:  hsl(210, 4%, 67%);
+    font-weight: 800;
+    margin-bottom: 70px;
+}
+.row-4{
+    display: flex;
+    
+}
+.row-4 img{
+    width: 100%;
+    height: 400px;
+    margin-bottom: -38px;
+}
+.footer{
+    background-color: #90d4c5;
+    text-align: center;
+}
+.footer-logo{
+    font-size: 45px;
+    font-family: Barlow;
+    font-weight: 800;
+    text-align: center;
+    padding: 30px 0px 30px 0px;
+    color: rgb(23, 112, 66);
+}
+.icons img{
+    margin: 50px 15px;
 }
